// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace details header widget should render RUNNING status correctly 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <nav
    aria-label="Breadcrumb"
    className="pf-c-breadcrumb"
    data-ouia-component-id={2}
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe={true}
  >
    <ol
      className="pf-c-breadcrumb__list"
    >
      <li
        className="pf-c-breadcrumb__item"
      >
        <a
          className="pf-c-breadcrumb__link"
          href="./#/workspaces"
          target={null}
        >
          Workspaces
        </a>
        <span
          className="pf-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              transform=""
            />
          </svg>
        </span>
      </li>
      <li
        className="pf-c-breadcrumb__item"
      >
        test-workspace-name
      </li>
    </ol>
  </nav>
  <div
    className="pf-l-flex"
  >
    <div
      className=""
    >
      <h1
        className=""
        data-pf-content={true}
      >
        test-workspace-name
        <span
          className="pf-c-label pf-m-green"
        >
          <span
            className="pf-c-label__content"
          >
            <span
              className="pf-c-label__icon"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="green"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 64 1024 1024"
                width="1em"
              >
                <path
                  d="M512 109.714c-181.486 0-329.143 147.657-329.143 329.143s147.657 329.143 329.143 329.143c181.486 0 329.143-147.657 329.143-329.143s-147.657-329.143-329.143-329.143zM954.743 694.171c45.714-78.4 68.571-164.114 68.571-256.914s-22.857-178.514-68.571-256.914c-45.714-78.4-107.886-140.571-186.286-186.286s-164.114-68.571-256.914-68.571c-92.8 0-178.514 22.857-256.914 68.571s-140.571 107.886-186.286 186.286c-45.486 78.4-68.343 164.114-68.343 256.914s22.857 178.514 68.571 256.914c45.714 78.4 107.886 140.343 186.286 186.057s164.114 68.571 256.914 68.571c92.8 0 178.514-22.857 256.914-68.571 78.171-45.714 140.343-107.657 186.057-186.057zM677.257 829.714c-52.571 22.629-107.886 34.057-165.486 34.057-57.829 0-112.914-11.429-165.486-34.057s-97.829-53.029-136-90.971c-37.943-37.943-68.343-83.2-90.971-136-22.629-52.571-34.057-107.886-34.057-165.486 0-57.829 11.429-112.914 34.057-165.486s53.029-97.829 90.971-136c37.943-37.943 83.2-68.343 136-90.971 52.571-22.629 107.886-34.057 165.486-34.057 57.829 0 112.914 11.429 165.486 34.057s97.829 53.029 136 90.971c37.943 37.943 68.343 83.2 90.971 136 22.629 52.571 34.057 107.886 34.057 165.486 0 57.829-11.429 112.914-34.057 165.486s-53.029 97.829-90.971 136c-37.943 37.943-83.429 68.343-136 90.971z"
                  transform="rotate(180 0 512) scale(-1 1)"
                />
              </svg>
            </span>
            Running
          </span>
        </span>
      </h1>
    </div>
    <div
      className="pf-m-align-right"
    >
      <div
        className="pf-c-dropdown pf-m-align-right workspace-action-selector"
        data-ouia-component-id={3}
        data-ouia-component-type="PF4/Dropdown"
        data-ouia-safe={true}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="pf-c-dropdown__toggle pf-m-primary"
          data-testid="test-workspace-id-action-dropdown"
          disabled={false}
          id="pf-toggle-id-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="pf-c-dropdown__toggle-text"
          >
            Actions
          </span>
          <span
            className="pf-c-dropdown__toggle-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`Workspace details header widget should render STOPPED status correctly 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <nav
    aria-label="Breadcrumb"
    className="pf-c-breadcrumb"
    data-ouia-component-id={0}
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe={true}
  >
    <ol
      className="pf-c-breadcrumb__list"
    >
      <li
        className="pf-c-breadcrumb__item"
      >
        <a
          className="pf-c-breadcrumb__link"
          href="./#/workspaces"
          target={null}
        >
          Workspaces
        </a>
        <span
          className="pf-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              transform=""
            />
          </svg>
        </span>
      </li>
      <li
        className="pf-c-breadcrumb__item"
      >
        test-workspace-name
      </li>
    </ol>
  </nav>
  <div
    className="pf-l-flex"
  >
    <div
      className=""
    >
      <h1
        className=""
        data-pf-content={true}
      >
        test-workspace-name
        <span
          className="pf-c-label"
          style={
            Object {
              "color": "grey",
            }
          }
        >
          <span
            className="pf-c-label__content"
          >
            <span
              className="pf-c-label__icon"
            >
              <svg
                aria-hidden="true"
                fill="#151515"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8.001,0 C3.589,0 0,3.590 0,8 C0,12.410 3.590,16 8.001,16 C12.412,16 16,12.410
               16,8 C16,3.589 12.4125,0 8.001,0 Z M8,14 C4.690,14 2,11.310 2,8 C2,4.692 4.690,2
               8,2 C11.307,2 14,4.690 14,8 C14,11.309 11.307,14 8,14 Z"
                />
                <path
                  d="M8.001,3.5 C5.519,3.5 3.5,5.520 3.5,8 C3.5,10.481 5.520,12.5 8.000,12.5 C10.482,12.5 12.5,10.481
               12.5,8 C12.5,5.519 10.482,3.5 8.000,3.5 Z M8,10.75 C6.483,10.75 5.25,9.517 5.25,8 C5.25,6.484
               6.483,5.25 8,5.25 C9.516,5.25 10.75,6.483 10.75,8 C10.75,9.516 9.516,10.75 8,10.75 Z"
                />
              </svg>
            </span>
            Stopped
          </span>
        </span>
      </h1>
    </div>
    <div
      className="pf-m-align-right"
    >
      <div
        className="pf-c-dropdown pf-m-align-right workspace-action-selector"
        data-ouia-component-id={1}
        data-ouia-component-type="PF4/Dropdown"
        data-ouia-safe={true}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="pf-c-dropdown__toggle pf-m-primary"
          data-testid="test-workspace-id-action-dropdown"
          disabled={false}
          id="pf-toggle-id-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="pf-c-dropdown__toggle-text"
          >
            Actions
          </span>
          <span
            className="pf-c-dropdown__toggle-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</section>
`;
